--- a/expenses_app/web/manifest.json
+++ b/expenses_app/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "prima_app",
-    "short_name": "prima_app",
+    "name": "expenses_app",
+    "short_name": "expenses_app",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
